Apps/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: homepage
  name: homepage-service
  namespace: homepage
spec:
  ports:
    - name: "3000"
      port: 80
      targetPort: 3000
  selector:
    app: homepage
